--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Clock</string>
     <string name="app_desc">A simple analog clock widget</string>
+    <string name="show_alarms">Show Alarms</string>
+    <string name="cant_find_show_alarms">Can\'t find Show Alarms.</string>
 </resources>
